--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "Cornchip",
   "license": "MIT",
   "dependencies": {
+    "@discordjs/opus": "^0.6.0",
     "discord.js": "^11.6.4",
+    "ffmpeg-static": "^4.4.0",
     "node-fetch": "^2.6.1",
-    "winston": "^3.1.0"
+    "winston": "^3.1.0",
+    "youtube-search": "^1.1.6",
+    "ytdl-core": "^4.9.1"
   }
 }
