--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {},
   "keywords": [
     "cow"
@@ -10,12 +11,12 @@
   "author": "Cornchip",
   "license": "MIT",
   "dependencies": {
-    "@discordjs/opus": "^0.6.0",
-    "discord.js": "^11.6.4",
-    "ffmpeg-static": "^4.4.0",
-    "node-fetch": "^2.6.1",
-    "winston": "^3.1.0",
+    "@discordjs/opus": "^0.9.0",
+    "discord.js": "^14.14.1",
+    "ffmpeg-static": "^5.2.0",
+    "node-fetch": "^3.3.2",
+    "winston": "^3.11.0",
     "youtube-search": "^1.1.6",
-    "ytdl-core": "^4.9.1"
+    "ytdl-core": "^4.11.5"
   }
 }
