--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "MIT",
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.16.1",
     "discord.js": "^14.14.1",
     "ffmpeg-static": "^5.2.0",
+    "libsodium-wrappers": "^0.7.13",
     "node-fetch": "^3.3.2",
     "winston": "^3.11.0",
     "youtube-search": "^1.1.6",
