--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ffmpeg-static": "^5.2.0",
     "libsodium-wrappers": "^0.7.13",
     "node-fetch": "^3.3.2",
+    "play-dl": "^1.9.7",
     "winston": "^3.11.0",
     "youtube-search": "^1.1.6",
     "ytdl-core": "^4.11.5"
